--- a/src/pages/consume-record-month/consume-record-month.html
+++ b/src/pages/consume-record-month/consume-record-month.html
@@ -13,4 +13,9 @@
     </ion-item>
   </ion-list>
 
+  <div *ngIf="(isNull && orderList.length === 0)" class="null-tips">
+    <img src="assets/imgs/null.png" alt="">
+    <div>暂无数据</div>
+  </div>
+
 </ion-content>
