--- a/src/pages/message-month/message-month.html
+++ b/src/pages/message-month/message-month.html
@@ -20,4 +20,9 @@
     </ion-item>
   </ion-list>
 
+  <div *ngIf="(isNull && messageList.length === 0)" class="null-tips">
+    <img src="assets/imgs/null.png" alt="">
+    <div>暂无数据</div>
+  </div>
+
 </ion-content>
