--- a/src/pages/message-record/message-record.html
+++ b/src/pages/message-record/message-record.html
@@ -21,9 +21,9 @@
 
 <ion-content>
   <super-tabs scrollTabs  [selectedTabIndex]="selectedTabIndex" style="width: 100vw">
-    <super-tab [root]="page1" [rootParams]="navParams" title="本周" ></super-tab>
-    <super-tab [root]="page2" [rootParams]="navParams" title="本月" ></super-tab>
-    <super-tab [root]="page3" [rootParams]="navParams" title="近三个月" ></super-tab>
+    <super-tab [root]="page1" [rootParams]="navParams" title="本月" ></super-tab>
+    <super-tab [root]="page2" [rootParams]="navParams" title="上个月" ></super-tab>
+    <super-tab [root]="page3" [rootParams]="navParams" title="前个月" ></super-tab>
   </super-tabs>
 
 </ion-content>
