--- a/src/pages/waiting-use/waiting-use.html
+++ b/src/pages/waiting-use/waiting-use.html
@@ -58,7 +58,7 @@
       </ion-item>
       <ion-item-options side="right">
         <div class="btn-list">
-              <button class="operator-button" color="light" ion-button (click)="pack(item?.list[0].id, item?.list[0].isPack)">
+              <button [ngClass]="{'unpack-btn':item?.list[0].isPack === '0'}" color="light" class="operator-button " ion-button (click)="pack(item?.list[0].id, item?.list[0].isPack)">
                 <ion-icon name="ios-cube-outline"></ion-icon>
                 打包
               </button>
@@ -78,6 +78,11 @@
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
+
+  <div *ngIf="(isNull && dataList.length === 0)" class="null-tips">
+    <!--<img src="assets/imgs/null.png" alt="">-->
+    <div>暂无数据</div>
+  </div>
 
   <!--<ion-list>-->
     <!--<ion-item-sliding  style="margin-bottom: 3vh">-->
