--- a/src/pages/waiting-use-list/waiting-use-list.html
+++ b/src/pages/waiting-use-list/waiting-use-list.html
@@ -46,13 +46,13 @@
         <!--<img src="https://dininghall.blob.core.windows.net/product/bb4ecee246e44ebdad0ef41ca1e8320e.png"/>-->
         <img src="{{p.blobPath}}"/>
         <div class="card-title">
-          <div style="font-size: 2rem">
+          <div style="font-size: 3rem">
             {{p.mealType}}
           </div>
           <div style="font-size: 1.7rem">
             {{p.productName}}
           </div>
-          <div style="font-size: 1.7rem">
+          <div style="font-size: 1.7rem;font-weight: bolder">
             {{p.factoryName}}-{{p.officeName}}
           </div>
         </div>
