--- a/src/pages/detail-modal/detail-modal.html
+++ b/src/pages/detail-modal/detail-modal.html
@@ -51,4 +51,4 @@
 
 </ion-content>
 
-<button full ion-button id="orderBtn" full class="order-btn" (click)="orderProduct(item.id)">订餐</button>
+<button  id="orderBtn" full class="order-btn" (click)="orderProduct(item.id)">订餐</button>
