--- a/src/pages/waiting-use/waiting-use.html
+++ b/src/pages/waiting-use/waiting-use.html
@@ -45,13 +45,13 @@
         <!--<img src="https://dininghall.blob.core.windows.net/product/bb4ecee246e44ebdad0ef41ca1e8320e.png"/>-->
         <img src="{{item.list[0].blobPath}}"/>
         <div class="card-title">
-          <div style="font-size: 2rem">
+          <div style="font-size: 3rem">
             {{item?.list[0].mealType}}
           </div>
           <div style="font-size: 1.7rem">
             {{item?.list[0].productName}}
           </div>
-          <div style="font-size: 1.7rem">
+          <div style="font-size: 1.7rem;font-weight: bolder">
             {{item?.list[0].factoryName}}-{{item?.list[0].officeName}}
           </div>
         </div>
