--- a/src/pages/order/order.html
+++ b/src/pages/order/order.html
@@ -33,13 +33,13 @@
   <ion-card ion-item  no-lines style="background-image: none" >
     <ion-card-header tappable (click)="openCalendar()">
       <ion-row *ngIf="!status">
-        <ion-col col-3>
-          <p>{{monStr}}月</p>
-          <p style="margin-left: -10px;font-weight: bold;font-size: 1.3em">{{dayStr}}日</p>
+        <ion-col offset-4 col-3>
+          <p style="font-weight: bold;font-size: 2rem">{{monStr}}月{{dayStr}}日</p>
+          <!--<p style="margin-left: -10px;font-weight: bold;font-size: 1.3em">{{dayStr}}日</p>-->
         </ion-col>
-        <ion-col col-6 *ngIf="isToday">
-          <span style="font-size: 4rem">今天</span>
-        </ion-col>
+        <!--<ion-col col-6 *ngIf="isToday">-->
+          <!--<span style="font-size: 4rem">今天</span>-->
+        <!--</ion-col>-->
 
       </ion-row>
       <ion-row *ngIf="status">
