--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
+  <script type="text/javascript" src="assets/js/web-animations.js"></script>
 
   <!-- un-comment this code to enable service worker
   <script>
@@ -45,7 +46,7 @@
 
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
-  <script src="assets/js/web-animations.js"></script>
+
 
 </body>
 </html>
