--- a/src/pages/setting/setting.html
+++ b/src/pages/setting/setting.html
@@ -27,9 +27,9 @@
     <button ion-item  (click)="openSelectLocation()">
       地区位置
     </button>
-    <!--<button ion-item  (click)="openPage('listPage')">-->
-      <!--反馈-->
-    <!--</button>-->
+    <button ion-item  (click)="gotoFeedBack()">
+      反馈
+    </button>
     <!--<button ion-item  (click)="openPage('listPage')">-->
       <!--用户指南-->
       <!--&lt;!&ndash;<ion-badge item-end>3</ion-badge>&ndash;&gt;-->
