--- a/src/pages/feed-back/feed-back.html
+++ b/src/pages/feed-back/feed-back.html
@@ -31,7 +31,7 @@
       <ion-icon name="ios-phone-portrait-outline" item-start></ion-icon>
       <p>手机：{{mobile}}</p>
     </ion-item>
-    <button ion-item  (click)="openLaws()">
+    <button ion-item  (click)="gotoFD()">
       <ion-icon name="ios-paper-outline" item-start></ion-icon>
         意见反馈
     </button>
