--- a/src/pages/feed-back-detail/feed-back-detail.html
+++ b/src/pages/feed-back-detail/feed-back-detail.html
@@ -39,7 +39,7 @@
   <div>
     请提供相关照片或截图
   </div>
-  <button style="width: 20vw;height: 10vh;border: .5px #c8c7cc solid">
+  <button (click)="uploadImg()" style="width: 20vw;height: 10vh;border: .5px #c8c7cc solid">
     <ion-icon name="ios-add-outline"></ion-icon>
     <p>
       相机/相册
