--- a/src/pages/feed-back-detail/feed-back-detail.html
+++ b/src/pages/feed-back-detail/feed-back-detail.html
@@ -8,6 +8,11 @@
 
   <ion-navbar>
     <ion-title>意见反馈</ion-title>
+    <ion-buttons end>
+      <button ion-button (click)="submit()">
+        <span ion-text color="primary">提交</span>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
