--- a/src/pages/feed-back-detail/feed-back-detail.html
+++ b/src/pages/feed-back-detail/feed-back-detail.html
@@ -9,7 +9,7 @@
   <ion-navbar>
     <ion-title>意见反馈</ion-title>
     <ion-buttons end>
-      <button ion-button (click)="submit()">
+      <button ion-button (click)="doSubmit()">
         <span ion-text color="primary">提交</span>
       </button>
     </ion-buttons>
