--- a/src/pages/waiting-use/waiting-use.html
+++ b/src/pages/waiting-use/waiting-use.html
@@ -7,8 +7,8 @@
     </ion-buttons>
     <ion-title>
       <div >
-        <span>{{userName}}</span><br/>
-        <span class="cut-title">欢迎来到{{factoryName}}</span>
+        <p>{{userName}}</p>
+        <p class="cut-title">欢迎来到{{factoryName}}</p>
       </div>
     </ion-title>
     <ion-buttons *ngIf="messageCount > 0" end>
