--- a/src/pages/home-menu/home-menu.html
+++ b/src/pages/home-menu/home-menu.html
@@ -28,12 +28,12 @@
       <button ion-item  (click)="openOverdue()">
         逾期未取餐
       </button>
-      <!--<button ion-item  (click)="openPage('listPage')">-->
-        <!--我的积分-->
-        <!--<ion-note clear item-end>-->
-          <!--16分-->
-        <!--</ion-note>-->
-      <!--</button>-->
+      <button ion-item  (click)="gotoIntegral()">
+        我的积分
+        <ion-note clear item-end>
+          {{integral}}分
+        </ion-note>
+      </button>
       <!--<button ion-item  (click)="openPage('listPage')">-->
         <!--我的营养管理-->
       <!--</button>-->
