--- a/src/index.html
+++ b/src/index.html
@@ -18,16 +18,8 @@
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
   <script type="text/javascript" src="assets/js/web-animations.js"></script>
-
-  <!-- un-comment this code to enable service worker
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js')
-        .then(() => console.log('service worker installed'))
-        .catch(err => console.error('Error', err));
-    }
-  </script>-->
-
+  <script type="text/javascript" src="assets/js/plupload.full.min.js"></script>
+  <!--<script type="text/javascript" src="assets/js/web-animations.js"></script>-->
   <link href="build/main.css" rel="stylesheet">
 
 
