--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -60,13 +60,13 @@
   </ion-card>
 
   <ion-card *ngIf="(isNull && orderList.length === 0)">
-    <!--<img class="img-item" src="assets/imgs/test.jpg"/>-->
-    <div  class="null-content">
-      <div class="null-tips">
-        <img src="assets/imgs/null.png" alt="">
-        <div>暂无订餐</div>
-      </div>
-    </div>
+    <img src="assets/imgs/noOrder.png"/>
+    <!--<div  class="null-content">-->
+      <!--<div class="null-tips">-->
+        <!--<img src="assets/imgs/null.png" alt="">-->
+        <!--<div>暂无订餐</div>-->
+      <!--</div>-->
+    <!--</div>-->
   </ion-card>
 
 
