--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,7 @@
     </ion-buttons>
     <ion-title>
       <div style="margin: 15px 0" >
-        <p>{{userName}}Jimmy</p>
+        <p>{{userName}}</p>
         <p class="cut-title">欢迎来到{{factoryName}}</p>
       </div>
     </ion-title>
