--- a/src/pages/waiting-use-list/waiting-use-list.html
+++ b/src/pages/waiting-use-list/waiting-use-list.html
@@ -36,51 +36,52 @@
 <ion-content>
 
   <ion-list no-lines>
-    <!--<ion-list-header>-->
-      <!--<span *ngIf="item.dateStr === todayStr">今日您已预订</span>-->
-      <!--<span *ngIf="item.dateStr !== todayStr">{{item.dateStr}}</span>-->
-    <!--</ion-list-header>-->
-
-    <ion-item-sliding *ngFor="let p of item?.list" style="margin-bottom: 3vh">
-      <ion-item>
-        <!--<img src="https://dininghall.blob.core.windows.net/product/bb4ecee246e44ebdad0ef41ca1e8320e.png"/>-->
-        <img src="{{p.blobPath}}"/>
-        <div class="card-title">
-          <div style="font-size: 3rem">
-            {{p.mealType}}
+    <div *ngFor="let p of item?.list" class="my-card">
+      <ion-item-sliding>
+        <ion-item>
+          <!--<img src="https://dininghall.blob.core.windows.net/product/bb4ecee246e44ebdad0ef41ca1e8320e.png"/>-->
+          <img src="{{p.blobPath}}"/>
+          <div class="card-title">
+            <div style="font-size: 3rem">
+              {{p.mealType}}
+            </div>
+            <div style="font-size: 1.7rem">
+              {{p.productName}}
+            </div>
+            <div style="font-size: 1.7rem;font-weight: bolder">
+              {{p.factoryName}}-{{p.officeName}}
+            </div>
           </div>
-          <div style="font-size: 1.7rem">
-            {{p.productName}}
+        </ion-item>
+        <ion-item-options side="right">
+          <div class="btn-list">
+            <!--<button *ngIf="p.isPack === '0'" disabled="true" class="operator-button" color="light" ion-button (click)="pack(p.id, p.isPack)">-->
+            <!--<ion-icon name="ios-cube-outline"></ion-icon>-->
+            <!--打包-->
+            <!--</button>-->
+            <button [ngClass]="{'unpack-btn': p.isPack === '0'}" class="operator-button" color="light" ion-button (click)="pack(p.id, p.isPack)">
+              <ion-icon name="ios-cube-outline"></ion-icon>
+              打包
+            </button>
+            <button class="operator-button" color="light" ion-button (click)="holdOrder(p.id)">
+              <ion-icon name="ios-hand-outline"></ion-icon>
+              留餐
+            </button>
+            <button class="operator-button" color="light" ion-button (click)="edit(p.id)">
+              <ion-icon name="ios-create-outline"></ion-icon>
+              编辑
+            </button>
+            <button class="operator-button" ion-button color="light" (click)="cancelOrder(p.id)">
+              <ion-icon name="ios-trash-outline"></ion-icon>
+              退订
+            </button>
           </div>
-          <div style="font-size: 1.7rem;font-weight: bolder">
-            {{p.factoryName}}-{{p.officeName}}
-          </div>
-        </div>
-      </ion-item>
-      <ion-item-options side="right">
-        <div class="btn-list">
-              <!--<button *ngIf="p.isPack === '0'" disabled="true" class="operator-button" color="light" ion-button (click)="pack(p.id, p.isPack)">-->
-                <!--<ion-icon name="ios-cube-outline"></ion-icon>-->
-                <!--打包-->
-              <!--</button>-->
-              <button [ngClass]="{'unpack-btn': p.isPack === '0'}" class="operator-button" color="light" ion-button (click)="pack(p.id, p.isPack)">
-                <ion-icon name="ios-cube-outline"></ion-icon>
-                打包
-              </button>
-              <button class="operator-button" color="light" ion-button (click)="holdOrder(p.id)">
-                <ion-icon name="ios-hand-outline"></ion-icon>
-                留餐
-              </button>
-              <button class="operator-button" color="light" ion-button (click)="edit(p.id)">
-                <ion-icon name="ios-create-outline"></ion-icon>
-                编辑
-              </button>
-              <button class="operator-button" ion-button color="light" (click)="cancelOrder(p.id)">
-                <ion-icon name="ios-trash-outline"></ion-icon>
-                退订
-              </button>
-        </div>
-      </ion-item-options>
-    </ion-item-sliding>
+        </ion-item-options>
+      </ion-item-sliding>
+      <div style="text-align: center;padding: 3px 0;font-size: 2rem">
+        <!--<span *ngIf="item.dateStr === todayStr">今日您已预订</span>-->
+        <span> {{p.mealType}}</span>
+      </div>
+    </div>
   </ion-list>
 </ion-content>
