--- a/src/pages/personal-info/personal-info.html
+++ b/src/pages/personal-info/personal-info.html
@@ -15,14 +15,14 @@
 
 <ion-content>
   <ion-list>
-    <ion-item tappable (click)="goQRCode(userInfo?.no)">
+    <ion-item tappable (click)="goQRCode(userInfo?.code)">
       <ion-thumbnail item-start>
         <img src="{{userInfo.avatar_url || 'assets/icon/icon.png'}}">
       </ion-thumbnail >
       <h2 style="margin-left: 5vw">
         <p ion-text>{{userInfo.name || '还没有昵称'}}</p>
         <p>
-          {{userInfo.no}}
+          {{userInfo.code}}
         </p>
         <p>
           {{userInfo.departmentName}}
