--- a/src/pages/overdue/overdue.html
+++ b/src/pages/overdue/overdue.html
@@ -52,7 +52,7 @@
     <!--暂无数据-->
   <!--</div>-->
 
-  <div *ngIf="(isNull && orderList.length === 0)" class="null-tips">
+  <div class="null-tips" *ngIf="(isNull && orderList.length === 0)">
     <img src="assets/imgs/null.png" alt="">
     <div>暂无数据</div>
   </div>
